Adding Redirect Logic, fixing Stories, adding Tests

--- a/src/data/causes/seas.json
+++ b/src/data/causes/seas.json
@@ -9,7 +9,7 @@
       }
     },
     "causeLaunch" : {
-      "preview": false,
+      "preview": true,
       "enabled": false
     },
     "causeId": "SGa6zohkY",
