--- a/src/data/causes/seas.json
+++ b/src/data/causes/seas.json
@@ -152,7 +152,7 @@
           },
           {
             "question": "This all sounds amazing! How else can I help?",
-            "answer": "You can donate directly to #TeamSeas by visiting [teamseas.org](https://teamseas.org)! Every dollar donated will equal a pound of trash cleaned up from the sea.\n\nAlso, ivite your friends and family to join in! Everybody who joins is helping to clean our seas even faster."
+            "answer": "You can donate directly to #TeamSeas by visiting [teamseas.org](https://teamseas.org)! Every dollar donated will equal a pound of trash cleaned up from the sea.\n\nAlso, invite your friends and family to join in! Everybody who joins is helping to clean our seas even faster."
           }
         ]
       },
