--- a/src/data/causes/seas.json
+++ b/src/data/causes/seas.json
@@ -144,7 +144,7 @@
           },
           {
             "question": "What nonprofit does Tab for #TeamSeas support?",
-            "answer": "Tab for #TeamSeas directly supports #TeamSeas, an internet-led initiative working to clean up our oceans, rivers, and lakes around the world. This initiative splits the money raised evenly between [Ocean Conservancy](https://oceanconservancy.org/) and [The Ocean Cleanup](https://theoceancleanup.com/)."
+            "answer": "Tab for #TeamSeas directly supports [#TeamSeas](https://teamseas.org), an internet-led initiative working to clean up our oceans, rivers, and lakes around the world. This initiative splits the money raised evenly between [Ocean Conservancy](https://oceanconservancy.org/) and [The Ocean Cleanup](https://theoceancleanup.com/)."
           },
           {
             "question": "How can I find out about new updates and announcements?",
@@ -152,7 +152,7 @@
           },
           {
             "question": "This all sounds amazing! How else can I help?",
-            "answer": "You can donate directly to #TeamSeas by visiting [teamseas.org](https://teamseas.org)! Every dollar donated will equal a pound of trash cleaned up from the sea.\n\nAlso, invite your friends and family to join in! Everybody who joins is helping to clean our seas even faster."
+            "answer": "You can donate directly to #TeamSeas by visiting [teamseas.org](https://teamseas.org)! Every dollar donated will equal a pound of trash cleaned up from the sea. Also, invite your friends and family to join in! Everybody who joins is helping to clean our seas even faster."
           }
         ]
       },
