Adding Footer Bubbles

--- a/src/data/causes/seas.json
+++ b/src/data/causes/seas.json
@@ -157,7 +157,8 @@
         ]
       },
       "Footer": {
-        "img": "../../img/seas/FooterJellyFish.png"
+        "img": "../../img/seas/FooterJellyFish.png",
+        "bubbleColor": "#4288F0"
       }
     }
   }
