--- a/src/data/causes/seas.json
+++ b/src/data/causes/seas.json
@@ -75,10 +75,10 @@
         "text": "Every tab makes an impact. Check out how much we've raised together.",
         "buttonText": "See All Financials",
         "ctaImg": "../../img/seas/financialSeas.png",
-        "q1Img": "../../img/cats/q1.png",
-        "q2Img": "../../img/cats/q2.png",
-        "q3Img": "../../img/cats/q3.png",
-        "q4Img": "../../img/cats/q4.png"
+        "q1Img": "../../img/causeshared/q1.png",
+        "q2Img": "../../img/causeshared/q2.png",
+        "q3Img": "../../img/causeshared/q3.png",
+        "q4Img": "../../img/causeshared/q4.png"
       },
       "Endorsements": {
         "smallEndorsements": [
@@ -102,7 +102,7 @@
             "endorsement": "“It's wonderful. Unobtrusive, useful, well designed, easy to navigate, and actually pretty fun! There is no reason to not have this extension. It has not affected performance and is never an inconvenience.”",
             "img": "../../img/reviews/chase_r.png"
           },
-          
+
           {
             "endorser": "Jonathon B.",
             "endorsement": "“Love that this gives me, a fool with no money, a way to donate to charity. :)”",
