--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "@storybook/manager-webpack5": "^6.4.14",
     "@storybook/react": "^6.4.14",
     "@storybook/theming": "^6.4.14",
+    "@testing-library/react-hooks": "^7.0.2",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^27.4.6",
