--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/styles": "^4.10.0",
     "@reach/router": "^1.3.4",
-    "@storybook/cli": "^6.4.3",
+    "@storybook/cli": "^6.4.14",
     "@use-it/interval": "^1.0.0",
     "babel-plugin-react-require": "^3.1.3",
     "bowser": "^2.11.0",
     "clsx": "^1.1.1",
-    "common-tags": "^1.8.0",
+    "common-tags": "^1.8.2",
     "dotenv-extended": "^2.9.0",
     "gatsby": "^3.14.0",
     "gatsby-plugin-facebook-pixel": "^1.0.5",
@@ -34,7 +34,7 @@
     "gatsby-transformer-sharp": "^3.14.0",
     "gatsby-transformer-yaml": "^3.14.0",
     "lodash": "^4.17.21",
-    "mdi-material-ui": "^6.20.0",
+    "mdi-material-ui": "^6.0.0",
     "moment": "^2.29.1",
     "qs": "^6.10.3",
     "react": "^16.14.0",
@@ -43,7 +43,7 @@
     "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
     "react-share": "^4.3.1",
-    "react-slick": "^0.27.12",
+    "react-slick": "^0.28.1",
     "react-transition-group": "^4.4.1",
     "react-twitter-embed": "^3.0.3",
     "react-typography": "^0.16.19",
@@ -94,7 +94,7 @@
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-gatsby": "^1.14.0",
-    "chromatic": "^5.10.2",
+    "chromatic": "^6.4.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "enzyme-to-json": "^3.6.1",
@@ -105,13 +105,17 @@
     "eslint-plugin-storybook": "^0.5.6",
     "esm": "^3.2.25",
     "gatsby-plugin-s3": "^0.3.8",
+    "graphql": "^14.0.0",
     "if-env": "^1.0.4",
     "jest": "^26.6.0",
+    "jscodeshift": "^0.11.0",
     "jsdom": "^16.4.0",
     "prettier": "^2.1.2",
+    "prop-types": "^15",
     "react-test-renderer": "^16.14.0",
     "storybook-addon-gatsby": "^0.0.3",
     "tab-e2e": "^2.0.2",
+    "typescript": "^4.5.5",
     "webpack": "^5.67.0"
   },
   "jest": {
