--- a/package.json
+++ b/package.json
@@ -85,9 +85,14 @@
     "@storybook/addon-actions": "^6.4.14",
     "@storybook/addon-essentials": "^6.4.14",
     "@storybook/addon-links": "^6.4.14",
+    "@storybook/addons": "^6.4.14",
+    "@storybook/api": "^6.4.14",
     "@storybook/builder-webpack5": "^6.4.14",
+    "@storybook/components": "^6.4.14",
+    "@storybook/core-events": "^6.4.14",
     "@storybook/manager-webpack5": "^6.4.14",
     "@storybook/react": "^6.4.14",
+    "@storybook/theming": "^6.4.14",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.0",
     "babel-loader": "^8.2.2",
@@ -95,6 +100,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-gatsby": "^1.14.0",
     "chromatic": "^6.4.1",
+    "core-js": "^3.0.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "enzyme-to-json": "^3.6.1",
@@ -108,6 +114,7 @@
     "graphql": "^14.0.0",
     "if-env": "^1.0.4",
     "jest": "^26.6.0",
+    "jquery": "^3.6.0",
     "jscodeshift": "^0.11.0",
     "jsdom": "^16.4.0",
     "prettier": "^2.1.2",
