--- a/package.json
+++ b/package.json
@@ -77,7 +77,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
-    "@babel/eslint-parser": "^7.16.5",
     "@babel/plugin-transform-runtime": "^7.16.10",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
@@ -94,6 +93,7 @@
     "@storybook/manager-webpack5": "^6.4.14",
     "@storybook/react": "^6.4.14",
     "@storybook/theming": "^6.4.14",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^27.4.6",
     "babel-loader": "^8.2.2",
     "babel-plugin-module-resolver": "^4.0.0",
@@ -104,9 +104,9 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "enzyme-to-json": "^3.6.1",
-    "eslint": "^8.7.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint": "^7.11.0",
+    "eslint-config-prettier": "^6.13.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-storybook": "^0.5.6",
     "esm": "^3.2.25",
