Upgrade to React 17
Removed problematic test file for a page we're deprecating rather than investing in fixes.

--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
     "mdi-material-ui": "^6.0.0",
     "moment": "^2.29.1",
     "qs": "^6.10.3",
-    "react": "^16.14.0",
+    "react": "^17.0.2",
     "react-alice-carousel": "^2.4.0",
     "react-countdown": "^2.3.2",
-    "react-dom": "^16.14.0",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-share": "^4.3.1",
     "react-slick": "^0.28.1",
@@ -93,6 +93,7 @@
     "@storybook/manager-webpack5": "^6.4.14",
     "@storybook/react": "^6.4.14",
     "@storybook/theming": "^6.4.14",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^27.4.6",
     "babel-loader": "^8.2.2",
@@ -102,7 +103,6 @@
     "chromatic": "^6.4.1",
     "core-js": "^3.0.0",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.5",
     "enzyme-to-json": "^3.6.1",
     "eslint": "^7.11.0",
     "eslint-config-prettier": "^6.13.0",
