--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   "author": "The Tab for a Cause Team",
   "dependencies": {
     "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@fontsource/poppins": "^4.5.0",
     "@fullpage/react-fullpage": "0.1.19",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.57",
-    "@material-ui/styles": "^4.10.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/styles": "^4.11.4",
+    "@mui/icons-material": "^5.3.1",
+    "@mui/lab": "^5.0.0-alpha.66",
+    "@mui/material": "^5.3.1",
+    "@mui/styles": "^5.3.0",
     "@reach/router": "^1.3.4",
     "@storybook/cli": "^6.4.14",
     "@use-it/interval": "^1.0.0",
