--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "build": "GATSBY_TELEMETRY_DISABLED=1 gatsby build",
     "develop": "SHOW_CATS_PAGE=true GATSBY_TELEMETRY_DISABLED=1 GATSBY_GENERATE_CAUSE_PAGES=true gatsby develop",
     "format": "eslint --fix 'src/**/*.js'",
-    "lint": "eslint 'src/**/*.js'",
+    "lint": "eslint \"src/**/*.js\"",
     "serve": "GATSBY_TELEMETRY_DISABLED=1 gatsby serve",
     "test": "yarn run lint && jest --env=jsdom --coverage --testPathIgnorePatterns=e2e-tests",
     "test:e2e": "dotenv-extended --defaults=./.env yarn jest --testPathPattern=e2e-tests.test --watchAll=false",
@@ -109,9 +109,15 @@
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.1",
     "eslint": "^7.11.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^6.13.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jest": "^26.0.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-storybook": "^0.5.6",
     "esm": "^3.2.25",
     "gatsby-plugin-s3": "^0.3.8",
