--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@reach/router": "^1.3.4",
     "@storybook/cli": "^6.4.14",
     "@use-it/interval": "^1.0.0",
-    "babel-plugin-react-require": "^3.1.3",
     "bowser": "^2.11.0",
     "clsx": "^1.1.1",
     "common-tags": "^1.8.2",
@@ -81,9 +80,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
-    "@babel/plugin-transform-runtime": "^7.16.10",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
     "@luigiminardim/storybook-addon-globals-controls": "^0.1.3",
     "@material-ui/codemod": "^4.5.0",
     "@storybook/addon-actions": "^6.4.14",
@@ -102,7 +98,6 @@
     "babel-jest": "^27.4.6",
     "babel-loader": "^8.2.2",
     "babel-plugin-module-resolver": "^4.0.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-gatsby": "^2.5.2",
     "chromatic": "^6.4.1",
     "core-js": "^3.0.0",
@@ -127,6 +122,7 @@
     "jquery": "^3.6.0",
     "jscodeshift": "^0.11.0",
     "jsdom": "^19.0.0",
+    "mockdate": "^3.0.5",
     "prettier": "^2.1.2",
     "prop-types": "^15",
     "react-test-renderer": "^17.0.2",
