--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "The Tab for a Cause Team",
   "dependencies": {
     "@emotion/react": "^11.7.1",
+    "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.6.0",
     "@fontsource/poppins": "^4.5.0",
     "@fullpage/react-fullpage": "0.1.18",
@@ -26,7 +27,6 @@
     "gatsby": "^4.5.5",
     "gatsby-plugin-facebook-pixel": "^1.0.5",
     "gatsby-plugin-image": "^2.5.2",
-    "gatsby-plugin-material-ui": "^4.1.0",
     "gatsby-plugin-react-helmet": "^5.5.0",
     "gatsby-plugin-robots-txt": "^1.7.0",
     "gatsby-plugin-sentry": "^1.0.1",
