--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "build": "GATSBY_TELEMETRY_DISABLED=1 gatsby build",
     "develop": "SHOW_CATS_PAGE=true GATSBY_TELEMETRY_DISABLED=1 GATSBY_GENERATE_CAUSE_PAGES=true gatsby develop",
     "format": "yarn run eslint --fix",
-    "lint": "eslint \"src/**/*.{js,jsx}\"",
+    "lint": "eslint \"{src,plugins}/**/*.{js,jsx}\"",
     "serve": "GATSBY_TELEMETRY_DISABLED=1 gatsby serve",
     "test": "yarn run lint && jest --env=jsdom --coverage --testPathIgnorePatterns=e2e-tests",
     "test:e2e": "dotenv-extended --defaults=./.env yarn jest --testPathPattern=e2e-tests.test --watchAll=false",
