--- a/package.json
+++ b/package.json
@@ -47,13 +47,14 @@
     "react-slick": "^0.28.1",
     "react-transition-group": "^4.4.1",
     "react-typography": "^0.16.19",
-    "rehype-react": "^6.0.0",
-    "rehype-sanitize": "^4.0.0",
-    "remark": "^13.0.0",
-    "remark-parse": "^9.0.0",
-    "remark-rehype": "^8.0.0",
+    "rehype-react": "^7.0.4",
+    "rehype-sanitize": "^5.0.1",
+    "remark": "^14.0.2",
+    "remark-parse": "^10.0.1",
+    "remark-rehype": "^10.1.0",
     "slick-carousel": "^1.8.1",
-    "typography": "^0.16.19"
+    "typography": "^0.16.19",
+    "unified": "^10.1.1"
   },
   "keywords": [
     "tab",
