--- a/package.json
+++ b/package.json
@@ -72,13 +72,12 @@
     "test:e2e": "dotenv-extended --defaults=./.env yarn jest --testPathPattern=e2e-tests.test --watchAll=false",
     "test:watch": "jest --env=jsdom --testPathIgnorePatterns=e2e-tests --watch",
     "deploy": "gatsby-plugin-s3 deploy",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "start-storybook -p 6006 --no-open",
     "build-storybook": "build-storybook"
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
     "@babel/preset-env": "^7.1.6",
-    "@luigiminardim/storybook-addon-globals-controls": "^0.1.3",
     "@storybook/addon-actions": "^6.4.16",
     "@storybook/addon-essentials": "^6.4.16",
     "@storybook/addon-links": "^6.4.16",
@@ -98,6 +97,7 @@
     "babel-preset-gatsby": "^2.5.2",
     "chromatic": "^6.4.1",
     "core-js": "^3.0.0",
+    "emotion-theming": "^11.0.0",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.1",
     "eslint": "^8.8.0",
