Make edits to ComingSoon countdown

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bowser": "^2.11.0",
     "clsx": "^1.1.1",
     "common-tags": "^1.8.2",
+    "dayjs": "^1.10.7",
     "dotenv-extended": "^2.9.0",
     "gatsby": "^4.5.5",
     "gatsby-plugin-facebook-pixel": "^1.0.5",
