--- a/src/data/causes/seas.json
+++ b/src/data/causes/seas.json
@@ -10,7 +10,7 @@
     },
     "causeLaunch": {
       "comingSoonTitle": "Tab for #TeamSeas",
-      "launchDate": "2021-10-29T13:00:00.000",
+      "launchDate": "2021-10-29T13:00:00.000Z",
       "preview": true,
       "enabled": false
     },
