--- a/src/data/causes/seas.json
+++ b/src/data/causes/seas.json
@@ -1,5 +1,5 @@
 {
-  "path": "seas2",
+  "path": "teamseas",
   "data": {
     "styles": {
       "colors": {
@@ -12,7 +12,7 @@
       "comingSoonTitle": "Tab for #TeamSeas",
       "launchDate": "2021-10-29T13:00:00.000Z",
       "preview": true,
-      "enabled": false
+      "enabled": true
     },
     "causeId": "SGa6zohkY",
     "metadata": {
