--- a/src/data/causes/seas.json
+++ b/src/data/causes/seas.json
@@ -81,6 +81,7 @@
         "q4Img": "../../img/causeshared/q4.png"
       },
       "Endorsements": {
+        "title": "People are saying good things",
         "smallEndorsements": [
           {
             "endorser": "Shayne W.",
