--- a/src/data/causes/seas.json
+++ b/src/data/causes/seas.json
@@ -17,7 +17,7 @@
     "causeId": "SGa6zohkY",
     "metadata": {
       "title": "Tab for #TeamSeas - Home",
-      "ogTitle": "Remove trash from the seas for free | Tab for #TeamSeas",
+      "ogTitle": "Remove Trash from the Ocean for Free | Tab for #TeamSeas",
       "ogDescription": "Open browser tabs to clean our seas, for free. It's that easy. Join #teamseas today!",
       "ogImage": "../../img/seas/ogImgInput.png",
       "causeSpecificKeywords": "charity, seas, TeamSeas, teamseas, #teamseas, ocean, oceans, sharks, whales, dolphins, fish, environment, global warming, river, rivers, lake, lakes, pollution, extension, new tab, chrome, help, donation, raise money, money, easy, ways to donate, free, best, home, youtube, safe, volunteer, internet, tab for a cause, impact, legitimate, food, facebook, twitter, reddit, instagram, tumblr"
