--- a/src/data/causes/seas.json
+++ b/src/data/causes/seas.json
@@ -111,12 +111,12 @@
           },
           {
             "endorser": "Ana L.",
-            "endorsement": "“It's a great way to raise money for charity when you don't have a lot of money and don't have the time to go out and try to raise money on your own. Plus I can decide what charity to donate to, and do it on my own time. I love it!”",
+            "endorsement": "“It's a great way to raise money for charity when you don't have a lot of money ... Plus I can decide what charity to donate to, and do it on my own time. I love it!”",
             "img": "../../img/reviews/ana_l.png"
           },
           {
             "endorser": "Alfonzo G.",
-            "endorsement": "“Wonderful service that does great things for people in need, and all you have to do is click a button. So really it's a no brainer, AND as a plus their new UI is really attractive and useful as well. Way better than the default chrome new tab page. So what do you have to lose?”",
+            "endorsement": "“Wonderful service that does great things for people in need, and all you have to do is click a button... Way better than the default chrome new tab page. So what do you have to lose?”",
             "img": "../../img/reviews/alfonzo_g.png"
           },
           {
