--- a/src/data/referrers/referrers.yml
+++ b/src/data/referrers/referrers.yml
@@ -576,3 +576,9 @@
   path: RyanTrahan
 - referrerId: 493
   path: booksnbros
+- referrerId: 555
+  path: minutefood
+- referrerId: 556
+  path: makesasound
+- referrerId: 557
+  path: atypical
