--- a/src/data/referrers/referrers.yml
+++ b/src/data/referrers/referrers.yml
@@ -579,6 +579,8 @@
 - referrerId: 555
   path: minutefood
 - referrerId: 556
-  path: makesasound
+  path: itmakesasound
 - referrerId: 557
   path: atypical
+- referrerId: 626
+  path: legaleagle2
