--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-plugin-image": "^2.5.2",
     "gatsby-plugin-manifest": "^4.6.0",
     "gatsby-plugin-material-ui": "^4.0.2",
+    "gatsby-plugin-quantcast-tag": "^0.1.1",
     "gatsby-plugin-react-helmet": "^5.5.0",
     "gatsby-plugin-robots-txt": "^1.7.0",
     "gatsby-plugin-sentry": "^1.0.1",
