--- a/src/data/financials/financials.yml
+++ b/src/data/financials/financials.yml
@@ -134,3 +134,7 @@
 - quarter: 4
   year: 2021
   pdfUrl: '/financials/2021-Q4.pdf'
+
+- quarter: 1
+  year: 2022
+  pdfUrl: '/financials/2022-Q1.pdf'
