--- a/src/data/referrers/referrers.yml
+++ b/src/data/referrers/referrers.yml
@@ -650,3 +650,9 @@
   path: cal
 - referrerId: 969
   path: harvard
+- referrerId: 970
+  path: upenn
+- referrerId: 971
+  path: rice
+- referrerId: 972
+  path: ou
