--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "@storybook/builder-webpack5": "^6.4.16",
     "@storybook/components": "^6.4.16",
     "@storybook/core-events": "^6.4.16",
+    "@storybook/html": "^6.5.12",
     "@storybook/manager-webpack5": "^6.4.16",
     "@storybook/react": "^6.4.16",
     "@storybook/theming": "^6.4.16",
