--- a/src/data/referrers/referrers.yml
+++ b/src/data/referrers/referrers.yml
@@ -668,3 +668,7 @@
   path: pillarofgarbage
 - referrerId: 978
   path: distraction
+- referrerId: 979
+  path: tmai
+- referrerId: 980
+  path: starburns
