--- a/src/data/financials/financials.yml
+++ b/src/data/financials/financials.yml
@@ -141,3 +141,9 @@
 - quarter: 2
   year: 2022
   pdfUrl: '/financials/2022-Q2.pdf'
+- quarter: 3
+  year: 2022
+  pdfUrl: '/financials/2022-Q3.pdf'
+- quarter: 4
+  year: 2022
+  pdfUrl: '/financials/2022-Q4.pdf'
