--- a/src/data/referrers/referrers.yml
+++ b/src/data/referrers/referrers.yml
@@ -676,3 +676,9 @@
   path: cookieeditor
 - referrerId: 982
   path: jordanharrod
+- referrerId: 988
+  path: bgh
+- referrerId: 989
+  path: purpleinsider
+- referrerId: 990
+  path: important
