Updated finances for Q1 and Q2 2023

--- a/src/data/financials/financials.yml
+++ b/src/data/financials/financials.yml
@@ -147,3 +147,10 @@
 - quarter: 4
   year: 2022
   pdfUrl: '/financials/2022-Q4.pdf'
+
+- quarter: 1
+  year: 2023
+  pdfUrl: '/financials/2023-Q1.pdf'
+- quarter: 2
+  year: 2023
+  pdfUrl: '/financials/2023-Q2.pdf'
