--- a/src/data/financials/financials.yml
+++ b/src/data/financials/financials.yml
@@ -154,3 +154,9 @@
 - quarter: 2
   year: 2023
   pdfUrl: '/financials/2023-Q2.pdf'
+- quarter: 3
+  year: 2023
+  pdfUrl: '/financials/2023-Q3.pdf'
+- quarter: 4
+  year: 2023
+  pdfUrl: '/financials/2023-Q4.pdf'
