--- a/src/data/referrers/referrers.yml
+++ b/src/data/referrers/referrers.yml
@@ -690,3 +690,13 @@
   path: extrahistory
 - referrerId: 1007
   path: gbs
+- referrerId: 1015
+  path: hai4
+- referrerId: 1016
+  path: bizarrebeasts
+- referrerId: 1017
+  path: animalogic3
+- referrerId: 1018
+  path: futureproof
+
+  
