--- a/src/data/referrers/referrers.yml
+++ b/src/data/referrers/referrers.yml
@@ -698,5 +698,10 @@
   path: animalogic3
 - referrerId: 1018
   path: futureproof
-
+- referrerId: 1032
+  path: thl
+- referrerId: 1033
+  path: thl2
+- referrerId: 1034
+  path: thl3
   
