--- a/src/data/referrers/referrers.yml
+++ b/src/data/referrers/referrers.yml
@@ -697,7 +697,7 @@
 - referrerId: 1017
   path: animalogic3
 - referrerId: 1018
-  path: futureproof
+  path: leviHildebrand
 - referrerId: 1032
   path: thl
 - referrerId: 1033
