Added Q3 and Q4 2024 Financals

--- a/src/data/financials/financials.yml
+++ b/src/data/financials/financials.yml
@@ -166,3 +166,9 @@
 - quarter: 2
   year: 2024
   pdfUrl: '/financials/2024-Q2.pdf'
+- quarter: 3
+  year: 2024
+  pdfUrl: '/financials/2024-Q3.pdf'
+- quarter: 4
+  year: 2024
+  pdfUrl: '/financials/2024-Q4.pdf'
