--- a/src/data/referrers/referrers.yml
+++ b/src/data/referrers/referrers.yml
@@ -710,5 +710,9 @@
   path: opentabs
 - referrerId: 1052
   path: mabelrush
+- referrerId: 1054
+  path: thisguysucked
+- referrerId: 1055
+  path: simpleandclean
 
   
